--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
+body, html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  font-family: Arial, sans-serif;
+  overflow-x: hidden;
+  background-color: #1a1a1a;  /* Background Color: Dark Grey */
+  color: #f5f5db;  /* Text Color: Light Gold */
+  scroll-behavior: smooth;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+main {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+nav {
+  margin: 10px 0;
+  text-align: center;
+}
+
+nav a {
+  margin: 0 10px;
+  text-decoration: none;
+  color: #ffd900;  /* Secondary Color: Gold */
+  font-size: 18px;
+  padding: 10px;
+  background-color: #7f7b7b;  /* Updated default background color for links */
+}
+
+nav a:hover {
+  text-decoration: underline;
+  color: #f5f5db;  /* Accent Color: Light Gold */
+}
+
+nav a.active {
+  background-color: #f5f5db;  /* Accent Color: Light Gold for active link */
+  color: #040316;  /* Text Color for active link */
 }
