--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,15 @@
-.App {
-  text-align: center;
+.spline-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  z-index: 1; /* Ensure this is lower than the summary component */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.summary-component {
+  position: absolute;
+  top: 50%; /* Adjust as needed */
+  right: 5%; /* Adjust as needed */
+  max-width: 300px;
+  z-index: 6; /* Higher than the spline object to appear on top */
+  color: #F5F5DC; /* Light Gold */
 }
